# todo_webapp

./: .gitignore  docker-compose-todo.yml
backend/: Dockerfile  bearer.py  crud.py  database.py  main.py  models.py  pyproject.toml  run.sh  run_dev.sh  schemas.py  todo_app.sqlite
backend/static/css/: base.css
backend/static/html/: create_new_user.html  login.html
backend/static/js/: create_new_user.js
frontend/: Dockerfile
simple_frontend/: Dockerfile
